add auto sourcing of workspace to devcontainer setup
by utilizing postCreateCommand to fill the bashrc file with the command to source it

See also: Add devcontainer ROS setup #1

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,7 @@
 	"containerEnv": {
 		"ROS_DOMAIN_ID": "42"
 	},
+	"postCreateCommand": "echo 'source ${containerWorkspaceFolder}/install/local_setup.bash' >> ~/.bashrc",
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
 		"vscode": {
