--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
 		"ROS_DOMAIN_ID": "42"
 	},
 	"postCreateCommand": "echo 'source ${containerWorkspaceFolder}/install/local_setup.bash' >> ~/.bashrc",
+	"postStartCommand": "rosdep update && rosdep install -i --from-path src --rosdistro $ROS_DISTRO -y",
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
 		"vscode": {
