--- a/src/home_bots_gazebo/package.xml
+++ b/src/home_bots_gazebo/package.xml
@@ -14,6 +14,8 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend>ros_gz_sim</depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
