add xml extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,8 @@
 				"streetsidesoftware.code-spell-checker",
 				"yzhang.markdown-all-in-one",
 				"zachflower.uncrustify",
-				"ms-vscode.cmake-tools"
+				"ms-vscode.cmake-tools",
+				"redhat.vscode-xml"
 			]
 		}
 	}
